fix: button color, scrollbar and some chat answers

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,17 +18,17 @@
 
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 1px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #7545ce;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: #8f77bb;
 }
 
 /* Handle on hover */
